<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aroya.lab8_code.Lab8_code">

    <Button
        android:id="@+id/Add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:textColor="@color/pureWhite"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/button_drawer"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/pureBlack"
        app:layout_constraintTop_toBottomOf="@+id/Add_item"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />
    <TextView
        android:id="@+id/gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift"
        android:textColor="@color/pureBlack"
        app:layout_constraintTop_toBottomOf="@+id/Add_item"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />
    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textColor="@color/pureBlack"
        app:layout_constraintTop_toBottomOf="@+id/Add_item"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/name"
        app:layout_constraintRight_toLeftOf="@+id/gift"/>
    
    <ImageView
        android:id="@+id/guide"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/grayC"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
