<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/confirm_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameE"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/confirm_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdayE"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_name"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@id/confirm_name"/>

    <TextView
        android:id="@+id/confirm_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giftE"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_birthday"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="@id/confirm_name"/>

    <EditText
        android:id="@+id/confirm_nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        app:layout_constraintTop_toTopOf="@id/confirm_name"
        app:layout_constraintBottom_toBottomOf="@id/confirm_name"
        app:layout_constraintLeft_toRightOf="@id/confirm_name"/>
    <EditText
        android:id="@+id/confirm_birthdayEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        app:layout_constraintTop_toTopOf="@id/confirm_birthday"
        app:layout_constraintBottom_toBottomOf="@id/confirm_birthday"
        app:layout_constraintLeft_toRightOf="@id/confirm_birthday"/>

    <EditText
        android:id="@+id/confirm_giftEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        app:layout_constraintTop_toTopOf="@id/confirm_gift"
        app:layout_constraintBottom_toBottomOf="@id/confirm_gift"
        app:layout_constraintLeft_toRightOf="@id/confirm_gift"/>

    <Button
        android:id="@+id/confirm_Add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/bottonGreen"
        android:textColor="@color/pureWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>